--- a/.azure/ipu-tests.yml
+++ b/.azure/ipu-tests.yml
@@ -71,8 +71,7 @@ jobs:
         for fpath in `ls requirements/**/*.txt`; do \
           python ./requirements/pytorch/adjust-versions.py $fpath; \
         done
-        pip install -e .[extra,examples,test]
-
+        pip install -e .[dev]
         pip list
       env:
         PACKAGE_NAME: "pytorch"
