--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,13 @@ requires = [
 
 [tool.isort]
 known_first_party = [
-    "pl_examples",
+    "examples",
     "pytorch_lightning",
     "lightning_fabric",
+    "tests_app",
+    "tests_cli",
+    "tests_cloud",
+    "tests_fabric",
     "tests_pytorch",
 ]
 profile = "black"
