--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,16 +106,6 @@ module = [
     "lightning.app.components.multi_node.trainer",
     "lightning.app.api.http_methods",
     "lightning.app.api.request_types",
-    "lightning.app.cli.commands.app_commands",
-    "lightning.app.cli.commands.lightning_cli",
-    "lightning.app.cli.commands.cmd_install",
-    "lightning.app.cli.connect.app",
-    "lightning.app.cli.commands.pwd",
-    "lightning.app.cli.commands.ls",
-    "lightning.app.cli.commands.cp",
-    "lightning.app.cli.commands.cd",
-    "lightning.app.cli.connect.data",
-    "lightning.app.cli.cmd_install",
     "lightning.app.components.database.client",
     "lightning.app.components.database.server",
     "lightning.app.components.database.utilities",
@@ -194,6 +184,16 @@ module = [
     "lightning.app.utilities.state",
     "lightning.app.utilities.tracer",
     "lightning.app.utilities.tree",
+    "lightning.cli.commands.app_commands",
+    "lightning.cli.commands.lightning_cli",
+    "lightning.cli.commands.cmd_install",
+    "lightning.cli.connect.app",
+    "lightning.cli.commands.pwd",
+    "lightning.cli.commands.ls",
+    "lightning.cli.commands.cp",
+    "lightning.cli.commands.cd",
+    "lightning.cli.connect.data",
+    "lightning.cli.cmd_install",
     "lightning.store.save",
     "lightning.store.utils",
     "lightning.store.authentication",
