--- a/.github/workflows/ci-examples-app.yml
+++ b/.github/workflows/ci-examples-app.yml
@@ -128,18 +128,5 @@ jobs:
         if: failure()
 
       - name: Statistics
-        if: success()
         working-directory: ./tests
-        run: |
-          coverage xml -i
-          coverage report -i
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: tests/coverage.xml
-          flags: cpu,pytest,app,examples
-          env_vars: OS,PYTHON
-          name: codecov-umbrella
-          fail_ci_if_error: false
+        run: coverage report -i
