--- a/.github/workflows/ci-tests-app.yml
+++ b/.github/workflows/ci-tests-app.yml
@@ -129,21 +129,8 @@ jobs:
         if: failure()
 
       - name: Statistics
-        if: success()
         working-directory: ./tests
-        run: |
-          coverage xml -i
-          coverage report -i
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: tests/coverage.xml
-          flags: ${{ env.COVERAGE_SCOPE }},cpu,pytest
-          env_vars: OS,PYTHON
-          name: codecov-umbrella
-          fail_ci_if_error: false
+        run: coverage report -i
 
 # TODO: figure out why we clone and install quick-start
 #      - name: Clone Quick Start Example Repo
